Tests/CarlTests/CompilerTests/negative/initial-invalid-probability.carl
automaton ForestFire {
    world {
        states {
            Fire,
            Tree,
            Empty,
            Ash,
        }
        neighborhood: VonNeumann(1)
        dimension: 2
    }

    initial {
        Fire: abc
        Tree: 0.4
        Empty: 0.4
    }

    rules {
        Fire -> Ash
        Tree -> Fire when count_neighbors(Fire) > 0
        Tree -> Fire with prob 0.01
        Ash -> Empty when count_neighbors(Fire) == 0
        Empty -> Tree with prob 0.01
    }
}
